# how-to-generate-training-data-faster-and-better

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: data.py  data_faster.py  data_faster_and_better.py
